--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
           <p>Untuk Azkiyaww,</p>
           <br />
           <p>
-            Di hari spesialmu ini, aku ingin mengucapkan selamat ulang tahun!
+            Di hari spesialmu ini, aku mau ngucapin selamat ulang tahun!
             Semoga hari-harimu selalu dipenuhi kebahagiaan, kesehatan, dan
-            kesuksesan.
+            kesuksesan. Aamiin
           </p>
           <br />
           <p>
             Semoga di tahun barumu ini, semua impian dan harapanmu dapat
-            terwujud.
+            terwujud. Selalu manut ortu dan jangan lupa istirahat!
           </p>
         </div>
         <div class="signature">
-          <p>Dengan hormat,</p>
+          <p>Dari Wong Gendeng,</p>
           <p>Afan</p>
         </div>
       </div>
